# rep-gen

./: .dir-locals.el  .gitignore  LICENSE  README.md  default.nix  deps.edn  rep-gen.cabal  shell.nix
app/: .dir-locals.el  Main.hs
nix/: sources.json
src/: Prelude.hs  PyChess.hs  RepGen.hs  Web.hs  chess.c  chess_helpers.py  notation.py  user.clj
src/RepGen/: Action.hs  Config.hs  Engine.hs  Export.hs  Lichess.hs  Monad.hs  MoveTree.hs  PyChess.hs  Score.hs  State.hs  Stats.hs  Strategy.hs  Type.hs
src/RepGen/Action/: CalcStats.hs  EnumCands.hs  EnumResps.hs  InitResps.hs  PruneCands.hs  PruneHooks.hs  TransStats.hs  Type.hs
src/RepGen/Config/: Type.hs
src/RepGen/Engine/: Local.hs  Type.hs
src/RepGen/Lichess/: History.hs
src/RepGen/Lichess/History/: Type.hs
src/RepGen/MoveTree/: Type.hs
src/RepGen/PyChess/: Internal.hs  Type.hs
src/RepGen/Score/: Type.hs
src/RepGen/State/: Type.hs
src/RepGen/Stats/: Type.hs
src/RepGen/Strategy/: Type.hs
src/rep_gen/: core.clj
test/: RepGenTest.hs
