cabal-version:      2.4
name:               rep-gen
version:            0.1.0.0
license-file:       LICENSE
author:             Cameron Kingsbury
maintainer:         camsbury7@gmail.com
extra-source-files: CHANGELOG.md

library
    hs-source-dirs:      src
    default-language:    Haskell2010
    exposed-modules:     Prelude
                       , RepGen
    other-modules:       RepGen.Action
                       , RepGen.Config.Type
                       , RepGen.Lichess
                       , RepGen.Lichess.History
                       , RepGen.Lichess.History.Type
                       , RepGen.MoveTree.Type
                       , RepGen.PyChess
                       , RepGen.PyChess.Internal
                       , RepGen.PyChess.Type
                       , RepGen.State.Type
                       , RepGen.Type
                       , RepGen.Monad
    default-extensions:  NoImplicitPrelude
                         DerivingStrategies
                         FlexibleContexts
                         FlexibleInstances
                         GeneralizedNewtypeDeriving
                         OverloadedLists
                         OverloadedStrings
                         RecordWildCards
                         ScopedTypeVariables
                         StandaloneDeriving
                         TupleSections
                         MultiParamTypeClasses
                         FunctionalDependencies
    build-depends:       base
                       , aeson
                       , bytestring
                       , classy-prelude
                       , data-default
                       , http-client
                       , http-client-tls
                       , http-types
                       , lens
                       , monad-logger
                       , mtl
                       , pretty-simple
                       , regex
                       , regex-pcre
                       , uuid
                       , text
                       , time
                       , vector
    pkgconfig-depends:   python3
    c-sources:           src/chess.c
    mixins:              base hiding (Prelude)

executable rep-gen
    main-is:            Main.hs
    hs-source-dirs:     app
    default-extensions: NoImplicitPrelude
                        OverloadedLists
                        OverloadedStrings
    build-depends:      base
                      , rep-gen
                      , data-default
                      , lens
                      , pretty-simple
    default-language:   Haskell2010
    pkgconfig-depends:  python3
    c-sources:          src/chess.c
    mixins:             base hiding (Prelude)

    -- gotta run the below to replace explicit ld-options it seems:
-- cabal new-build exe:rep-gen  --ghc-options="-l${PY_PRE} -I${PY_BASE}/include/${PY_PRE}" --extra-lib-dirs=${PY_BASE}/lib
    -- ld-options:         -I${PY_BASE}/include/python3.10
    --                     -L${PY_BASE}/lib
    --                     -l${PY_PRE}