cabal-version:      2.4
name:               rep-gen
version:            0.1.0.0
license-file:       LICENSE
author:             Cameron Kingsbury
maintainer:         camsbury7@gmail.com
extra-source-files: CHANGELOG.md

library
    hs-source-dirs:      src
    default-language:    Haskell2010
    exposed-modules:     Prelude
                       , RepGen
    other-modules:       RepGen.Action
                       , RepGen.Action.CalcStats
                       , RepGen.Action.EnumCands
                       , RepGen.Action.EnumResps
                       , RepGen.Action.PruneCands
                       , RepGen.Action.PruneHooks
                       , RepGen.Action.TransStats
                       , RepGen.Action.Type
                       , RepGen.Config.Type
                       , RepGen.Engine
                       , RepGen.Engine.Type
                       , RepGen.Lichess
                       , RepGen.Lichess.History
                       , RepGen.Lichess.History.Type
                       , RepGen.Monad
                       , RepGen.MoveTree
                       , RepGen.MoveTree.Type
                       , RepGen.PyChess
                       , RepGen.Score
                       , RepGen.Score.Type
                       , RepGen.State
                       , RepGen.State.Type
                       , RepGen.Stats
                       , RepGen.Stats.Type
                       , RepGen.Strategy
                       , RepGen.Strategy.Type
                       , RepGen.Type
                       , Web
    default-extensions:  DerivingStrategies
                         FlexibleContexts
                         FlexibleInstances
                         GeneralizedNewtypeDeriving
                         OverloadedLists
                         OverloadedStrings
                         RecordWildCards
                         ScopedTypeVariables
                         StandaloneDeriving
                         TupleSections
                         MultiParamTypeClasses
                         FunctionalDependencies
    build-depends:       base
                       , aeson
                       , bytestring
                       , classy-prelude
                       , data-default
                       , http-client
                       , http-client-tls
                       , http-types
                       , lens
                       , monad-logger
                       , mtl
                       , persistent
                       , persistent-sqlite
                       , pretty-simple
                       , regex
                       , regex-pcre
                       , uuid
                       , text
                       , time
                       , vector
    pkgconfig-depends:   python3
    c-sources:           src/chess.c
    ghc-options:         -Wall
    mixins:              base hiding (Prelude)

executable rep-gen
    main-is:            Main.hs
    hs-source-dirs:     app
    default-extensions: OverloadedLists
                        OverloadedStrings
    build-depends:      base
                      , rep-gen
                      , data-default
                      , lens
                      , pretty-simple
    default-language:   Haskell2010
    pkgconfig-depends:  python3
    c-sources:          src/chess.c
    mixins:             base hiding (Prelude)

    -- gotta run the below to replace explicit ld-options it seems:
-- cabal new-build exe:rep-gen  --ghc-options="-l${PY_PRE} -I${PY_BASE}/include/${PY_PRE}" --extra-lib-dirs=${PY_BASE}/lib
    -- ld-options:         -I${PY_BASE}/include/python3.10
    --                     -L${PY_BASE}/lib
    --                     -l${PY_PRE}