cabal-version:      2.4
name:               rep-gen
version:            0.1.0.0
license-file:       LICENSE
author:             Cameron Kingsbury
maintainer:         camsbury7@gmail.com
extra-source-files: CHANGELOG.md

library
    hs-source-dirs:      src
    default-language:    Haskell2010
    exposed-modules:     Prelude
                       , RepGen
    other-modules:       RepGen.Action
                       , RepGen.Action.CalcStats
                       , RepGen.Action.EnumCands
                       , RepGen.Action.EnumResps
                       , RepGen.Action.PruneCands
                       , RepGen.Action.PruneHooks
                       , RepGen.Action.TransStats
                       , RepGen.Action.Type
                       , RepGen.Config
                       , RepGen.Config.Type
                       , RepGen.Engine
                       , RepGen.Engine.Local
                       , RepGen.Engine.Type
                       , RepGen.Export
                       , RepGen.Lichess
                       , RepGen.Lichess.History
                       , RepGen.Lichess.History.Type
                       , RepGen.Monad
                       , RepGen.MoveTree
                       , RepGen.MoveTree.Type
                       , RepGen.PyChess
                       , RepGen.PyChess.Type
                       , RepGen.Score
                       , RepGen.Score.Type
                       , RepGen.State
                       , RepGen.State.Type
                       , RepGen.Stats
                       , RepGen.Stats.Type
                       , RepGen.Strategy
                       , RepGen.Strategy.Type
                       , RepGen.Type
                       , Web
    default-extensions:  DerivingStrategies
                         FlexibleContexts
                         FlexibleInstances
                         GeneralizedNewtypeDeriving
                         OverloadedLists
                         OverloadedStrings
                         RecordWildCards
                         ScopedTypeVariables
                         StandaloneDeriving
                         TupleSections
                         MultiParamTypeClasses
                         FunctionalDependencies
    build-depends:       base
                       , aeson
                       , bytestring
                       , classy-prelude
                       , command
                       , data-default
                       , http-client
                       , http-client-tls
                       , http-types
                       , lens
                       , monad-logger
                       , mtl
                       , persistent
                       , persistent-sqlite
                       , pretty-simple
                       , regex
                       , regex-pcre
                       , uuid
                       , text
                       , time
                       , vector
    pkgconfig-depends:   python3
    c-sources:           src/chess.c
    ghc-options:         -Wall
    mixins:              base hiding (Prelude)


test-suite rep-gen-tests
    main-is:             Main.hs
    other-modules:       RepGenTest
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    default-language:    Haskell2010
    default-extensions:  DerivingStrategies
                         FlexibleContexts
                         FlexibleInstances
                         FunctionalDependencies
                         GeneralizedNewtypeDeriving
                         OverloadedStrings
                         OverloadedLists
                         RecordWildCards
                         ScopedTypeVariables
                         StandaloneDeriving
                         TypeApplications
                         TupleSections
    build-depends:       base
                       , classy-prelude
                       , rep-gen
                       , hedgehog
                       , lens
                       , mtl
                       , tasty
                       , tasty-discover
                       , tasty-hedgehog

executable rep-gen
    main-is:            Main.hs
    hs-source-dirs:     app
    default-extensions: OverloadedLists
                        OverloadedStrings
    build-depends:      base
                      , aeson
                      , rep-gen
                      , data-default
                      , lens
                      , optparse-applicative
                      , pretty-simple
    default-language:   Haskell2010
    pkgconfig-depends:  python3
    c-sources:          src/chess.c
    mixins:             base hiding (Prelude)